# change-safety-os

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
change_safety_os/: __init__.py  cli.py  cli_app.py
change_safety_os/adapters/: __init__.py  git_adapter.py  shell_adapter.py
change_safety_os/assets/: __init__.py
change_safety_os/assets/config/: contracts.yaml  guard-matrix.yaml  risk-rules.yaml
change_safety_os/assets/skills/change-safety/: SKILL.md
change_safety_os/assets/templates/: agents-snippet.md  change-safety-record.md
change_safety_os/core/: __init__.py  change_context.py  config_loader.py  contract_ack.py  contract_checker.py  evidence.py  finalize.py  guard_runner.py  impact_scanner.py  probe_runner.py  project_scanner.py  protected_field_scanner.py  report_writer.py  symbol_tracer.py  workflow_graph.py
config/: domains.yaml  probe-registry.yaml
docs/: design.md  runbook.md
skills/change-safety/: SKILL.md
templates/: agents-snippet.md
tests/: test_change_safety_os.py
