[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "change-safety-os"
version = "0.1.0"
description = "Project-agnostic change safety workflow and Codex skill for side-effect control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Change Safety OS Maintainers" }
]
dependencies = [
  "PyYAML>=6.0"
]
keywords = ["codex", "ai", "agents", "side-effects", "workflow", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
]

[project.scripts]
cso = "change_safety_os.cli_app:main"

[tool.setuptools.packages.find]
include = ["change_safety_os*"]

[tool.setuptools.package-data]
change_safety_os = [
  "assets/config/*.yaml",
  "assets/templates/*.md",
  "assets/skills/change-safety/SKILL.md",
]
